# Generated by Django 5.0.14 on 2026-08-18 08:45

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('equipment', '0001_initial'),
        ('interventions', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='InterventionRequest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('reference', models.CharField(max_length=20, unique=True)),
                ('title', models.CharField(max_length=200)),
                ('description', models.TextField()),
                ('priority', models.CharField(choices=[('low', 'Low'), ('medium', 'Medium'), ('high', 'High'), ('critical', 'Critical')], default='medium', max_length=10)),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('approved', 'Approved'), ('rejected', 'Rejected')], default='pending', max_length=10)),
                ('location', models.CharField(blank=True, max_length=200)),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('rejection_reason', models.TextField(blank=True)),
                ('equipment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='intervention_requests', to='equipment.equipment')),
                ('intervention', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='source_request', to='interventions.intervention')),
                ('reviewed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_requests', to=settings.AUTH_USER_MODEL)),
                ('submitted_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='submitted_requests', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-submitted_at'],
            },
        ),
        migrations.CreateModel(
            name='MaintenanceChecklist',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True)),
                ('intervention_type', models.CharField(choices=[('preventive', 'Preventive'), ('corrective', 'Corrective'), ('both', 'Both')], default='both', max_length=12)),
                ('estimated_duration_minutes', models.PositiveIntegerField(default=60)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(blank=True, help_text='If set, this checklist applies to all equipment of this category', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='checklists', to='equipment.equipmentcategory')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_checklists', to=settings.AUTH_USER_MODEL)),
                ('equipment', models.ForeignKey(blank=True, help_text='If set, this checklist applies only to this specific equipment', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='checklists', to='equipment.equipment')),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='ChecklistItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('order', models.PositiveIntegerField(default=0)),
                ('description', models.CharField(max_length=500)),
                ('is_critical', models.BooleanField(default=False, help_text='If true, this step cannot be skipped')),
                ('checklist', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='interventions.maintenancechecklist')),
            ],
            options={
                'ordering': ['order'],
            },
        ),
        migrations.CreateModel(
            name='InterventionChecklistProgress',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_completed', models.BooleanField(default=False)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('completed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
                ('intervention', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='checklist_progress', to='interventions.intervention')),
                ('item', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='progress_records', to='interventions.checklistitem')),
                ('checklist', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='progress_records', to='interventions.maintenancechecklist')),
            ],
            options={
                'ordering': ['item__order'],
                'unique_together': {('intervention', 'item')},
            },
        ),
    ]
